edition = "2023";  // successor to proto2 and proto3

package virtualmachine.v1;

import "internalapi/scanner/v4/index_report.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/virtualmachine/v1;v1";
option features.(pb.go).api_level = API_OPAQUE;

// The index report is collected from the virtual machine agent and contains
// the package information.
message IndexReport {
  string vsock_cid = 1;
  scanner.v4.IndexReport index_v4 = 2;
}

// The index report event is sent to Central and contains additional information
// to match the index report to a virtual machine.
message IndexReportEvent {
  // This is the id of the virtual machine resource that matches the vsock_cid
  // of the report.
  string id = 1;
  IndexReport index = 2;
}
